# dns-updater

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
.github/workflows/: ci.yml
cmd/: BUILD.bazel  run.go  run_test.go
config/: BUILD.bazel  config.go  config_test.go
docker/: docker-compose.yaml
file/: BUILD.bazel  file_manager.go  file_manager_fake.go  file_manager_interface.go  file_manager_test.go
requestor/: BUILD.bazel  requestor_fake.go  requestor_http.go  requestor_http_test.go  requestor_interface.go
scheduler/: BUILD.bazel  scheduler.go
secret/: BUILD.bazel  secret_manager_env.go  secret_manager_file.go  secret_manager_file_test.go  secret_manager_interface.go
testdata/: config1.yaml
updater/: BUILD.bazel  updater_duckdns.go  updater_duckdns_test.go  updater_factory.go  updater_factory_test.go  updater_interface.go
