load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cmd_lib",
    srcs = ["run.go"],
    importpath = "github.com/Loptt/dns-updater/cmd",
    visibility = ["//visibility:private"],
    deps = ["//updater"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cmd_test",
    srcs = ["run_test.go"],
    embed = [":cmd_lib"],
)
