load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "secret",
    srcs = [
        "secret_manager_file.go",
        "secret_manager_interface.go",
    ],
    importpath = "github.com/Loptt/dns-updater/secret",
    visibility = ["//visibility:public"],
    deps = ["//file"],
)

go_test(
    name = "secret_test",
    srcs = ["secret_manager_file_test.go"],
    embed = [":secret"],
    deps = ["//file"],
)
